--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
                 </div>
             </div>
         </div>
-        <nav class="navbar">
-            <div class="centra">Accomplishments &amp; Achievements</div>
-            <div class="centra"></div>
+        <nav class="container-fluid navbar">
+            <div class="centra">
+                <h5>Accomplishments &amp; Achievements</h5>
+            </div>
         </nav>
         <div class="container-fluid main">
             <div class="centra">
