fixed indent and section link

--- a/cognitive.html
+++ b/cognitive.html
@@ -133,7 +133,7 @@
         <div class="container-fluid domain">
             <div class="row">
                 <div class="col">
-                    <a href="cognitive.html">
+                    <a href="cognitive.html#math">
                         <img class="icon" src="images/icons/math.png" alt="Mathematics">
                     </a><br>mathematician
                 </div>
@@ -159,6 +159,6 @@
                 </div>
             </div>
         </div>
-    <footer class="intro footer"> Copyright &copy; 2020 JKDEV. All rights reserved.</footer>
+        <footer class="intro footer"> Copyright &copy; 2020 JKDEV. All rights reserved.</footer>
     </body>
 </html>
