--- a/aesthetic.html
+++ b/aesthetic.html
@@ -14,22 +14,11 @@
         <script src="js/bootstrap.min.js"></script>
     </head>
     <body>
-        <ul class="nav justify-content-center navbar">
-            <li class="nav-item">
-                <a class="nav-link active" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
+        <nav class="nav justify-content-center navbar">
+            <a href="index.html">
                 <img id="jklogo" src="images/jklogo.png" alt="JK logo">
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Domains</a>
-                <div class="dropdown-menu menu">
-                    <a class="dropdown-item" href="physical.html">Physical</a>
-                    <a class="dropdown-item" href="cognitive.html">Cognitive</a>
-                    <a class="dropdown-item" href="aesthetic.html">Aesthetic</a>
-                </div>
-            </li>
-        </ul>
+            </a>
+        </nav>
         <div class="jumbotron jumbotron-fluid intro">
             <div class="container intro">
                 <h1 class="topper display-4">I AM ... A MUSICIAN</h1>
@@ -61,19 +50,19 @@
                 </div>
             </div>
         </div>
-        <nav class="navbar domain">
+        <section class="container-fluid titlebar">
             <div class="centra">
                 <h5>My Journey</h5>
             </div>
-            <div class="centra"></div>
-            <div class="centra"></div>
-        </nav>
+        </section>
         <div class="container-fluid main justify-content-center">
             <div class="centra">
                 <h6 style="font-weight:800;">Year 2020</h6>
                     <p>I call 2020 the year of adaptability! As much as I was excited to finally match my sister at Grade03, I was devastated that examimations was cancelled. However, the lockdown allowed me to shine as being an IT monitor and leader in school has allowed me to transition easily from physical classes to online classes. I am currently preparing myself for Grade04 examinations and will skip Grade03 as per Teacher Teresa's recommendation.</p>
+                <hr>
                 <h6 style="font-weight:800;">Year 2019</h6>
                     <p>Music became my solace in 2019. It lifted my spirits when I am down and helped me grieve when I lose my toys or arguments with my sister. Mom said my music has moods that ranges from bouncy light and chirpy to long low vibrato as if i am wailing. I spent 2019 preparing for my Grade03 exam but it was postponed from Nov2019 to March2020 due to examiners' logistics.</p>
+                <hr>
                 <h6 style="font-weight:800;">Year 2018</h6>
                     <p>My first violin exam the year before in 2017 was truly my biggest learning moment. It was the first time I became aware of the notion of anxiousness and how difficult it was to maintain control of something as simple as breathing! Having Teacher Teresa coaching me with recitals and calming tactics helped me earned my Distinction. I followed on to earn a second Distinction in 2018.
                     </p>
@@ -84,30 +73,30 @@
                 <div class="col">
                     <a href="cognitive.html">
                         <img class="icon" src="images/icons/math.png" alt="Mathematics">
-                    </a>
+                    </a><br>mathematician
                 </div>
                 <div class="col">
                     <a href="physical.html">
                         <img class="icon" src="images/icons/spartan.png" alt="Spartan">
-                    </a>
+                    </a><br>spartan
                 </div>
                 <div class="col">
                     <a href="index.html">
                         <img class="icon" src="images/jklogo.png" alt="I am JK">
-                    </a>
+                    </a><br>WHO AM I?
                 </div>
                 <div class="col">
                     <a href="cognitive.html#coding">
                         <img class="icon" src="images/icons/code.png" alt="Coding">
-                    </a>
+                    </a><br>coder
                 </div>
                 <div class="col">
                     <a href="aesthetic.html">
                         <img class="icon" src="images/icons/violin.png" alt="Music">
-                    </a>
+                    </a><br>violinist
                 </div>
             </div>
         </div>
-    <footer class="intro footer"> Copyright &copy; 2020 JKDEV. All rights reserved.</footer>
+        <footer class="intro footer"> Copyright &copy; 2020 JKDEV. All rights reserved.</footer>
     </body>
 </html>
