--- a/cognitive.html
+++ b/cognitive.html
@@ -80,7 +80,7 @@
             <div class="centra">    
                 <div class="row">
                     <div class="col">    
-                        <h5 id="coding">Robotics &amp; Coding</h5>
+                        <h5 id="scratch">Robotics &amp; Coding</h5>
                     </div>
                     <div class="col">
                         <a class="btn btn-light" href="https://scratch.mit.edu/users/tech6jamie/" target="_blank">
