fixed coder link

--- a/aesthetic.html
+++ b/aesthetic.html
@@ -86,7 +86,7 @@
                     </a><br>WHO AM I?
                 </div>
                 <div class="col">
-                    <a href="cognitive.html#coding">
+                    <a href="cognitive.html#scratch">
                         <img class="icon" src="images/icons/code.png" alt="Coding">
                     </a><br>coder
                 </div>
