--- a/cognitive.html
+++ b/cognitive.html
@@ -148,7 +148,7 @@
                     </a><br>WHO AM I?
                 </div>
                 <div class="col">
-                    <a href="cognitive.html#coding">
+                    <a href="cognitive.html#scratch">
                         <img class="icon" src="images/icons/code.png" alt="Coding">
                     </a><br>coder
                 </div>
