design edit: intuitive to user

--- a/cognitive.html
+++ b/cognitive.html
@@ -32,20 +32,17 @@
                 <div class="col" title="A MATHEMATICIAN">
                     <a href="#math">
                         <img class="icon" src="images/icons/math.png" alt="A Mathematician">
-                        <br>Mathematician
-                    </a>
+                    </a><br>Mathematician
                 </div>
                 <div class="col" title="A CODER">
                     <a href="#coding">
                         <img class="icon" src="images/icons/code.png" alt="A Coder">
-                        <br>Coder
-                    </a>
+                    </a><br>Coder
                 </div>
                 <div class="col" title="A GAMER">
                     <a href="#chess">
                         <img class="icon" src="images/icons/gamer.png" alt="A Gamer">
-                        <br>Gamer
-                    </a>
+                    </a><br>Gamer
                 </div>
             </div>
         </div>
@@ -133,29 +130,24 @@
         <div class="container-fluid domain">
             <div class="row">
                 <div class="col">
-                    <a href="cognitive.html#math">
-                        <img class="icon" src="images/icons/math.png" alt="Mathematics">
-                    </a><br>mathematician
-                </div>
-                <div class="col">
-                    <a href="physical.html">
-                        <img class="icon" src="images/icons/spartan.png" alt="Spartan">
-                    </a><br>spartan
-                </div>
-                <div class="col">
                     <a href="index.html">
                         <img class="icon" src="images/jklogo.png" alt="I am JK">
                     </a><br>WHO AM I?
                 </div>
                 <div class="col">
-                    <a href="cognitive.html#scratch">
-                        <img class="icon" src="images/icons/code.png" alt="Coding">
-                    </a><br>coder
+                    <a href="aesthetic.html">
+                        <img class="icon" src="images/icons/violin.png" alt="Violinist">
+                    </a><br>my niche
                 </div>
                 <div class="col">
-                    <a href="aesthetic.html">
-                        <img class="icon" src="images/icons/violin.png" alt="Music">
-                    </a><br>violinist
+                    <a href="physical.html">
+                        <img class="icon" src="images/icons/spartan.png" alt="Spartan">
+                    </a><br>my sport
+                </div>
+                <div class="col">
+                    <a href="achieve.html">
+                        <img class="icon" src="images/icons/achieve.png" alt="A Leader">
+                    </a><br>achievements
                 </div>
             </div>
         </div>
