--- a/physical.html
+++ b/physical.html
@@ -97,29 +97,24 @@
         <div class="container-fluid domain">
             <div class="row">
                 <div class="col">
-                    <a href="cognitive.html#math">
-                        <img class="icon" src="images/icons/math.png" alt="Mathematics">
-                    </a><br>mathematician
-                </div>
-                <div class="col">
-                    <a href="physical.html">
-                        <img class="icon" src="images/icons/spartan.png" alt="Spartan">
-                    </a><br>spartan
-                </div>
-                <div class="col">
                     <a href="index.html">
                         <img class="icon" src="images/jklogo.png" alt="I am JK">
                     </a><br>WHO AM I?
                 </div>
                 <div class="col">
-                    <a href="cognitive.html#scratch">
-                        <img class="icon" src="images/icons/code.png" alt="Coding">
-                    </a><br>coder
+                    <a href="cognitive.html">
+                        <img class="icon" src="images/icons/logician.png" alt="Logician">
+                    </a><br>my forte
                 </div>
                 <div class="col">
                     <a href="aesthetic.html">
-                        <img class="icon" src="images/icons/violin.png" alt="Music">
-                    </a><br>violinist
+                        <img class="icon" src="images/icons/violin.png" alt="Violinist">
+                    </a><br>my niche
+                </div>
+                <div class="col">
+                    <a href="achieve.html">
+                        <img class="icon" src="images/icons/achieve.png" alt="A Leader">
+                    </a><br>achievements
                 </div>
             </div>
         </div>
