--- a/index.html
+++ b/index.html
@@ -31,69 +31,26 @@
                 <div class="col" title="A SPARTAN">
                     <a href="physical.html">
                         <img class="icon" src="images/icons/spartan.png" alt="A Spartan">
-                        <br>SPARTAN
-                    </a>
+                    </a><br>my sport
                 </div>
                 <div class="col" title="A LOGICIAN">
                     <a href="cognitive.html">
                         <img class="icon" src="images/icons/logician.png" alt="A Logician">
-                        <br>LOGICIAN
-                    </a>
+                    </a><br>my forte
                 </div>
                 <div class="col" title="A MUSICIAN">
                     <a href="aesthetic.html">
-                        <img class="icon" src="images/icons/violin.png" alt="Musician">
-                        <br>MUSICIAN
-                    </a>
+                        <img class="icon" src="images/icons/violin.png" alt="A Musician">
+                    </a><br>my niche
+                </div>
+                <div class="col" title="A LEADER">
+                    <a href="achieve.html">
+                        <img class="icon" src="images/icons/achieve.png" alt="A Leader">
+                    </a><br>achievements
                 </div>
             </div>
         </div>
-        <nav class="container-fluid navbar">
-            <div class="centra">
-                <h5>Accomplishments &amp; Achievements</h5>
-            </div>
-        </nav>
-        <div class="container-fluid main">
-            <div class="centra">
-                <h6 style="font-weight:800;">Year 2020</h6>
-                    <ul>
-                        <li>MOE Edusave Certificate of Academic Achievements<br>Primary 5</li>
-                        <li>Top in English (Primary 5)<br>Singapore Primary School</li>
-                        <li>Bronze Award Middle Division - Grade 05<br>Singapore International Math Olympiad Challenge (SIMOC)</li>
-                        <li>Bronze Award<br>Annual Mathlympics</li>
-                        <li>Silver Award Grade 05 Division<br>Singapore and Asian Schools Math Olympiad (SASMO)</li>
-                        <li>SIlver Award Grade 05<br>Singapore Math Kangaroo Contest</li>
-                        <li>Credit Middle Division - Year 5<br>Australian Mathematics Competition</li>                 
-                    </ul>
-                    <hr>
-                <h6 style="font-weight:800;">Year 2019</h6>
-                    <ul>
-                        <li>MOE Edusave EAGLES Award<br>Primary 4</li>
-                        <li>MOE Edusave Certificate of Academic Achievements<br>Primary 4</li>
-                        <li>Honorable Mention<br>National Mathematical Olympiad of Singapore (NMOS)</li>
-                        <li>Certificate of Participation<br>Annual Mathlympics</li>
-                        <li>Certificate of Participation Grade 04 Division<br>Singapore and Asian Schools Math Olympiad (SASMO)</li>
-                        <li>Bronze Award Grade 04<br>Singapore Math Kangaroo Contest</li>
-                        <li>Credit Middle Division - Year 4<br>Australian Mathematics Competition</li>
-                        <li>Distinction ABRSM Level 1 Award<br>Grade 02 Violin</li>
-                        <li>Certificate of Completion<br>TSR Backstroke Competency Programme
-                    </ul>
-                    <hr>
-                <h6 style="font-weight:800;">Year 2018</h6>
-                    <ul>
-                        <li>CDC-CCC Education Merit Award<br>Primary 3</li>
-                        <li>MOE Edusave Certificate of Academic Achievements<br>Primary 3</li>
-                        <li>Certificate of Achievement<br>RippleUX National Coding &amp; Robotic Competition</li>
-                        <li>Credit Middle Division - Year 3<br>Australian Mathematics Competition</li>
-                        <li>Model Pupil Award - Primary 3<br>Singapore Primary School</li>
-                        <li>Certificate of Completion<br>TSR Breaststroke Competency Programme</li>
-                        <li>Certificate of Paticipation<br>Introduction to Basic Meditation</li>
-                    </ul>
-                <a class="btn btn-sm btn-warning" href="index.html#jklogo">Back to Top</a>
-                <a class="btn btn-sm btn-warning" href="jkdevpdf.pdf" download="portfolio">Download PDF</a>
-                <a class="btn btn-sm btn-warning" href="googleform.html" target="blank">Contact Me</a>
-            </div>
-        </div>
+       
     <footer class="intro footer"> Copyright &copy; 2020 JKDEV. All rights reserved.</footer>
     </body>
 </html>
